--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "swiper": "^4.2.6",
     "vue": "^2.5.2",
