--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "swiper": "^4.2.6",
+    "vant": "^1.3.1",
     "vue": "^2.5.2",
     "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
