--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^4.2.6",
-    "vant": "^1.3.1",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.0",
     "vue-i18n": "^8.11.2",
@@ -33,6 +32,8 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
